--- a/about.html
+++ b/about.html
@@ -461,11 +461,10 @@
         <div class="about-text">
           <h2>关于SPIN Lab</h2>
           <p>
-            SPIN Lab（Spatial Intelligence and Neural Processing
-            Laboratory）成立于2018年，是中国科学技术大学人工智能领域的重要研究团队。实验室聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
+            SPIN Lab（Spatial Intelligence Laboratory）成立于2025年，是中国科学技术大学人工智能领域的重要研究团队。实验室聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。
           </p>
           <p>
-            实验室依托中国科学技术大学的交叉学科优势，汇聚了由夏彦教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、认知科学等领域的研究者与开发者。我们以"让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合。
+            实验室依托中国科学技术大学人工智能与数据科学学院，汇聚了由夏彦预聘副教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、机械工程等领域的研究者与开发者。我们以"让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合。
           </p>
           <p>
             实验室拥有先进的实验平台和开源生态，并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动具身智能从实验室走向真实世界。我们致力于培养具有国际视野和创新能力的高水平研究人才。
@@ -479,14 +478,14 @@
   </section>
 
   <!-- 研究方向部分 -->
-  <section id="research-areas" class="research-section">
+  <!-- <section id="research-areas" class="research-section">
     <div class="container">
       <h2 class="section-title" style="text-align: center; margin-bottom: 3rem; font-size: 2rem;">核心研究方向</h2>
     </div>
-  </section>
+  </section> -->
 
   <!-- 生成式具身智能 -->
-  <section id="generative" class="research-section">
+  <!-- <section id="generative" class="research-section">
     <div class="container">
       <div class="research-container">
         <div class="research-content">
@@ -528,10 +527,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 公平具身智能 -->
-  <section id="fairness" class="research-section">
+  <!-- <section id="fairness" class="research-section">
     <div class="container">
       <div class="research-container">
         <div class="research-content">
@@ -573,10 +572,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 因果具身智能 -->
-  <section id="causal" class="research-section">
+  <!-- <section id="causal" class="research-section">
     <div class="container">
       <div class="research-container">
         <div class="research-content">
@@ -618,10 +617,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 图神经网络 -->
-  <section id="gnn" class="research-section">
+  <!-- <section id="gnn" class="research-section">
     <div class="container">
       <div class="research-container">
         <div class="research-content">
@@ -663,10 +662,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 发展历程 -->
-  <section class="milestone-section">
+  <!-- <section class="milestone-section">
     <div class="container">
       <h2 class="section-title">发展历程</h2>
       <div class="timeline">
@@ -714,7 +713,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 使命与愿景 -->
   <section class="mission-section">
