--- a/team.html
+++ b/team.html
@@ -225,9 +225,9 @@
           </div>
           <div class="member-info">
             <h3>夏彦</h3>
-            <div class="member-position">SPIN-LAB 主任 | 中国科学技术大学预聘副教授</div>
+            <div class="member-position">中国科学技术大学人工智能与数据科学学院 预聘副教授</div>
             <div class="member-short-bio">
-              牛津大学视觉几何实验室（VGG）访问学者。博士毕业于慕尼黑工业大学，期间在牛津大学VGG实验室联合培养。研究成果发表于CVPR、ICCV、ECCV和ISPRS
+              博士毕业于德国慕尼黑工业大学，期间在牛津大学VGG实验室联合培养。研究成果发表于CVPR、ICCV、ECCV和ISPRS
               JPRS等国际顶级会议和期刊
             </div>
             <div class="member-links">
@@ -239,7 +239,7 @@
           </div>
         </div>
 
-        <div class="team-card">
+        <!-- <div class="team-card">
           <div class="member-photo">
             <img src="images/people.jpg" alt="李教授">
           </div>
@@ -256,9 +256,9 @@
               <a href="#"><i class="fab fa-github"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
-
+<!-- 
         <div class="team-card">
           <div class="member-photo">
             <img src="images/people.jpg" alt="王教授">
@@ -276,7 +276,7 @@
               <a href="#"><i class="fab fa-github"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
