--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="logo">
         <a href="index.html">
-          <h1>SPIN Lab</h1>
+          <h1>中科大空间智能实验室 SPIN Lab </h1>
         </a>
       </div>
       <div class="nav-right">
@@ -52,8 +52,7 @@
           <div class="slide-content">
             <h2>欢迎访问SPIN Lab</h2>
             <p>
-              SPIN Lab聚焦于人工智能（AI）与具身智能的前沿研究，致力于探索能够在物理世界中感知、决策并执行复杂任务的智能体理论与技术。实验室依托中国科学技术大学的交叉学科优势，
-              汇聚了由夏彦教授领衔的跨学科团队，成员涵盖计算机视觉、机器人学、强化学习、认知科学等领域的研究者与开发者。
+              中科大空间智能实验室（SPatial INtelligence Lab）专注于空间智能、三维视觉、自主机器人以及多模态感知等前沿方向的研究。我们致力于赋予智能体在复杂三维环境中的感知、理解与交互能力，尤其关注在GNSS信号不可用或失效场景中的定位与导航问题。实验室研究涵盖激光雷达点云定位与建图、多模态融合学习、视觉语言导航、以及具身智能系统的构建。团队注重理论与应用结合，积极与国际知名高校和产业界合作，推动空间智能在机器人与人工智能领域的落地与发展。
             </p>
             <a href="about.html" class="btn">了解更多</a>
           </div>
@@ -291,7 +290,7 @@
             </div>
           </div>
         </div>
-        <div class="team-member">
+        <!-- <div class="team-member">
           <div class="member-photo">
             <img src="images/people.jpg" alt="李博士">
           </div>
@@ -305,7 +304,7 @@
               <a href="#"><i class="fab fa-google"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="team-member">
           <div class="member-photo">
             <img src="images/caoxuewei.jpg" alt="王博士">
@@ -351,16 +350,16 @@
           <h2>联系我们</h2>
           <p>欢迎联系SPIN Lab了解更多信息或讨论合作机会</p>
           <ul class="contact-list">
-            <li><i class="fas fa-map-marker-alt"></i> 中国科学技术大学苏州高等研究院</li>
-            <li><i class="fas fa-envelope"></i> spinlab@example.edu.cn</li>
-            <li><i class="fas fa-phone"></i> +86 010-12345678</li>
-            <li><i class="fas fa-clock"></i> 工作日: 9:00-17:00</li>
+            <li><i class="fas fa-map-marker-alt"></i> 中国科学技术大学人工智能与数据科学学院</li>
+            <li><i class="fas fa-envelope"></i> yan.xia@ustc.edu.cn</li>
+            <!-- <li><i class="fas fa-phone"></i> +86 010-12345678</li>
+            <li><i class="fas fa-clock"></i> 工作日: 9:00-17:00</li> -->
           </ul>
-          <div class="social-links">
+          <!-- <div class="social-links">
             <a href="#"><i class="fab fa-weixin"></i></a>
             <a href="#"><i class="fab fa-weibo"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
-          </div>
+          </div> -->
         </div>
         <div class="contact-map">
           <!-- 这里可以嵌入地图，或者使用静态图片代替 -->
